feat(ai): 파라미터 분석 및 호출로직 수정 (외부API관리 서비스 통신 제거)